// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`拡張v1の遠征を再現する: role.oathbound / none 1`] = `
{
  "fingerprint": "281dad1df160bd05506d3e1346c67541695db725f160c619e06995b8ca002ecf",
  "floor": 10,
  "status": "won",
  "turn": 1033,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / none 1`] = `
{
  "fingerprint": "a36c1d95290b9b6373116e8daa9a8d4904910d37273929703fbd27e39033b529",
  "floor": 6,
  "status": "returned",
  "turn": 551,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / none 1`] = `
{
  "fingerprint": "32b2c3a3b3bb10ac39e79f24be3fdf2d066b113ba5222217d246f35c80a72a7c",
  "floor": 6,
  "status": "returned",
  "turn": 501,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / none 1`] = `
{
  "fingerprint": "9092e82809ed1e9ac23f72ae55212e2939f1e6ad675a4e208cfe5af62ab5abab",
  "floor": 10,
  "status": "won",
  "turn": 1143,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / none 1`] = `
{
  "fingerprint": "9a74c92afe093eaccfdd4814929ca848eac08965c3d596b70af786095d577a40",
  "floor": 6,
  "status": "returned",
  "turn": 513,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / none 1`] = `
{
  "fingerprint": "0a3e6bc228bd7f8645f10d046b5a15c093cf84d22e8842081bf4740dedc48f20",
  "floor": 10,
  "status": "won",
  "turn": 928,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / none 1`] = `
{
  "fingerprint": "94f3780af0f27f65b0498d189fdee01b2eade305dbbecd4f65afcc7f2e7759a7",
  "floor": 6,
  "status": "returned",
  "turn": 489,
}
`;

exports[`拡張v1の遠征を再現する: role.oathbound / lantern 1`] = `
{
  "fingerprint": "11a49b0f053112a9c1c42c923bd0d1c7f7f6549d076d4302a6a5ef87479ac479",
  "floor": 10,
  "status": "won",
  "turn": 1007,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / lantern 1`] = `
{
  "fingerprint": "7432cd0eb0d5503d6659a40fa4277018eebcaac4360a96ca28e12ac05b6a866d",
  "floor": 6,
  "status": "returned",
  "turn": 551,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / lantern 1`] = `
{
  "fingerprint": "685dfcc954b8e50fbbbf547a87c442ba75e889db65ed8bed6ba999d28017778c",
  "floor": 6,
  "status": "returned",
  "turn": 502,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / lantern 1`] = `
{
  "fingerprint": "44018608db87d1d480bd879692d55290b6f05e8ea1f2a6d4e0ad84ad290a50c3",
  "floor": 10,
  "status": "won",
  "turn": 1149,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / lantern 1`] = `
{
  "fingerprint": "b06aef30ff4bc96fe05ec1bcae335d1ee4595d5505e613f3027272a6b4986887",
  "floor": 6,
  "status": "returned",
  "turn": 513,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / lantern 1`] = `
{
  "fingerprint": "84660baa27dca2343361c19adc4265ec3eb11a522e9227935a44fa56df8f1bef",
  "floor": 10,
  "status": "won",
  "turn": 926,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / lantern 1`] = `
{
  "fingerprint": "94f3780af0f27f65b0498d189fdee01b2eade305dbbecd4f65afcc7f2e7759a7",
  "floor": 6,
  "status": "returned",
  "turn": 489,
}
`;
